# dlt-axie-infinity-demo

./: .dockerignore  .gitignore  Makefile  README.md  axies.py  axies_load.py  axies_schema.yaml  dune.py  dune_helpers.py  fill_missing_blocks.py  helpers.py  pyproject.toml  pytest.ini  requirements.txt  state.json  tox.ini
.dlt/: config.toml
.github/workflows/: cron_run_axies.yml
abi/: README.md  known_contracts.json  known_contracts_to_abi.py
abi/abis/: 0x05B0BB3c1c320b280501B86706C3551995BC8571.json  0x0B7007c13325C48911F73A2daD5FA5dCBf808aDc.json  0x0CF8fF40a508bdBc39fBe1Bb679dCBa64E65C7Df.json  0x173A2d4fa585a63aCd02c107D57F932be0a71bCc.json  0x213073989821f738A7BA3520C3D31a1F9aD31bBd.json  0x2ECb08F87F075b5769Fe543d0e52e40140575ea7.json  0x306A28279d04a47468ed83d55088d0DCd1369294.json  0x32950db2a7164aE833121501C797D79E7B79d74C.json  0x36B628e771b0Ca12A135E0a7b8e0394f99dCe95b.json  0x487671acdea3745B6dAc3ae8d1757b44a04bFE8A.json  0x7D0556D55ca1a92708681e2e231733EBd922597D.json  0x7f13232Bdc3a010c3f749a1c25bF99f1C053CE70.json  0x7f27E35170472E7f107d3e55C2B9bCd44aA01dD5.json  0x814A9C959a3Ef6CA44b5e2349e3bBa9845393947.json  0x8Bd81a19420bAd681B7bfc20E703EBd8e253782D.json  0x8C811e3C958e190f5ec15fb376533A3398620500.json  (+15 more)
deploy/: Dockerfile  config.toml  docker-compose.yml  extract_helm_values.py
deploy/envs/: common.env  (+4 more)
ethereum/: __init__.py  eth_source_utils.py  ethereum.py  ethereum_schema.yml
reports/: README.md
schema_export/: axies_schema.yaml
schemas/: axies_schema.json  ethereum_schema.yaml
tests/: test_eth_utils.py  test_extractor.py
(+771 files in other folders)
