[tool.poetry]
name = "dlt-axie-infinity-demo"
version = "0.1.0"
description = "DLT Pipeline Script to get Axie Infinity smart contracts data on Ronin Network into BigQuery/Redshift"
authors = ["Marcin Rudolf <rudolfix@rudolfix.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
web3 = "^5.30.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
mypy = "0.960"
flake8 = "3.9.2"
bandit = "^1.7.0"
flake8-bugbear = "^21.4.3"
types-simplejson = "^3.17.0"
types-requests = "^2.25.6"
types-python-dateutil = "^2.8.15"
pytest-pythonpath = "^0.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
